--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,10 @@
   margin: 0 auto;
 }
 
+.mx-auto {
+  margin: 0 auto;
+}
+
 .flex {
   display: flex;
 }
@@ -83,6 +87,13 @@
   overflow: hidden;
 }
 
+.sidebar {
+  display: none;
+  position: sticky;
+  top: 0;
+  height: 100vh;
+}
+
 .p-4 {
   padding: 4px;
 }
@@ -110,6 +121,11 @@
 .py-32 {
   padding-top: 48px;
   padding-bottom: 48px;
+}
+
+.px-64 {
+  padding-left: 64px;
+  padding-right: 64px;
 }
 
 .my-16 {
@@ -233,6 +249,13 @@
   border-radius: 50%;
 }
 
+.sm-circle-icon {
+  width: 24px;
+  height: 24px;
+  background-color: var(--black);
+  border-radius: 50%;
+}
+
 .relative {
   position: relative;
 }
@@ -246,9 +269,13 @@
 }
 
 /* Medium */
-@media (min-width: 768px) {
+@media (min-width: 600px) {
   .container {
     width: 75%;
+  }
+
+  .max-width-512 {
+    max-width: 512px;
   }
 
   .gray-box {
@@ -260,6 +287,15 @@
     background-color: var(--light-gray);
     transform: rotate(-45deg);
     z-index: -1;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: 250px 1fr;
+  }
+
+  .sidebar {
+    display: block;
   }
 }
 
@@ -277,10 +313,5 @@
     height: 100%;
     background-color: var(--light-gray);
     z-index: 0;
-  }
-
-  .container {
-    padding-left: 64px;
-    padding-right: 64px;
   }
 }
