--- a/src/style.css
+++ b/src/style.css
@@ -313,6 +313,10 @@ body {
   color: var(--black);
 }
 
+.color-gray {
+  color: rgb(173, 173, 173);
+}
+
 .svg-white {
   filter: brightness(0) invert(1);
 }
