--- a/src/style.css
+++ b/src/style.css
@@ -96,6 +96,10 @@ body {
   max-width: 512px;
 }
 
+.width-60-percent {
+  width: 60%;
+}
+
 .full-width {
   width: 100%;
 }
@@ -226,6 +230,11 @@ body {
   padding-right: 8px;
 }
 
+.px-12 {
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
 .px-64 {
   padding-left: 64px;
   padding-right: 64px;
@@ -296,6 +305,10 @@ body {
   background-color: var(--white);
 }
 
+.bg-dark-gray {
+  background-color: var(--dark-gray);
+}
+
 .bg-light-black {
   background-color: var(--light-black);
 }
@@ -335,6 +348,14 @@ body {
 
 .rounded {
   border-radius: 4px;
+}
+
+.rounded-lg {
+  border-radius: 12px;
+}
+
+.rounded-xl {
+  border-radius: 16px;
 }
 
 .rounded-full {
@@ -391,12 +412,19 @@ input {
   outline: none;
 }
 
-.text-input {
+.login-text-input {
   color: var(--dark-gray);
   font-size: 16px;
   padding: 16px 16px;
   border-radius: 8px;
-  border: solid 1px var(--dark-gray);
+  border: solid 1px var(--black);
+}
+
+.message-text-input {
+  color: var(--dark-gray);
+  font-size: 16px;
+  padding: 8px 16px;
+  border-radius: 8px;
 }
 
 .comment-input {
