--- a/src/style.css
+++ b/src/style.css
@@ -64,6 +64,10 @@ body {
   align-items: center;
 }
 
+.align-flex-end {
+  align-items: flex-end;
+}
+
 .justify-between {
   justify-content: space-between;
 }
@@ -102,6 +106,10 @@ body {
 
 .gap-44 {
   gap: 44px;
+}
+
+.gap-128{
+  gap: 128px;
 }
 
 .navbar {
@@ -186,6 +194,10 @@ body {
   width: 48px;
 }
 
+.width-64 {
+  width: 64px;
+}
+
 .width-128 {
   width: 128px;
 }
@@ -204,6 +216,11 @@ body {
 
 .text-medium {
   font-size: 22px;
+}
+
+/* Stops link from putting underlines on text */
+.text-no-underline {
+  text-decoration: none;
 }
 
 .text-large {
@@ -420,4 +437,41 @@ body.sidebar-open {
 /* Simple grid for mobile layout */
 .grid {
   display: block;
+}
+
+/* For InboxUser component */
+.rounded-box {
+  border-radius: 12px;
+  padding: 16px;
+  height: 80px;
+  background-color: var(--medium-black);
+}
+
+/* For Inbox Select Message Pop-up */
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2000;
+  display: flex;
+  justify-content: center;
+  align-items:end; 
+}
+
+.popup-menu {
+  background-color: var(--medium-black);
+  width: 90%;
+  height: 100%;
+  max-height: 50%;
+  max-width: 100%;
+  padding: 16px;
+  border-radius: 12px 12px 0 0;
+  box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
+  animation: slide-up 5s ease-out;
+  color: var(--white);
+  text-align: center;
+  align-items: center;
 }
