--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,50 @@ body {
   background-color: var(--black);
 }
 
+/* Styles related to inbox and search pages */
+/* For InboxUser component */
+.rounded-box {
+  border-radius: 12px;
+  padding: 16px;
+  background-color: var(--medium-black);
+}
+
+/* For Inbox Select Message Pop-up */
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2000;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+}
+
+.popup-menu {
+  background-color: var(--medium-black);
+  width: 90%;
+  height: 100%;
+  max-height: 50%;
+  max-width: 100%;
+  padding: 16px;
+  border-radius: 12px 12px 0 0;
+  box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
+  animation: slide-up 5s ease-out;
+  color: var(--white);
+  text-align: center;
+  align-items: center;
+}
+
+.active-button {
+  background-color: var(--primary-color); /* Highlight active button */
+  color: white; /* Change text color */
+  box-shadow: inset 0px 4px 8px rgba(0, 0, 0, 0.3); /* Indented effect */
+  transform: translateY(2px); /* Slightly "pressed" appearance */
+}
+
 /* Typography */
 .text-extra-small {
   font-size: 12px;
@@ -74,9 +118,23 @@ body {
   color: #64748b;
 }
 
+.text-no-underline {
+  text-decoration: none;
+}
+
 /* Layout - Container and Positioning */
 .container {
   width: 85%;
+  margin: 0 auto;
+}
+
+.medium-container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.large-container {
+  width: 95%;
   margin: 0 auto;
 }
 
@@ -129,6 +187,10 @@ body {
   align-items: center;
 }
 
+.align-flex-end {
+  align-items: flex-end;
+}
+
 .justify-between {
   justify-content: space-between;
 }
@@ -178,6 +240,10 @@ body {
   gap: 44px;
 }
 
+.gap-128 {
+  gap: 128px;
+}
+
 /* Spacing - Padding */
 .p-4 {
   padding: 4px;
@@ -193,6 +259,11 @@ body {
 
 .pt-16 {
   padding-top: 16px;
+}
+
+.py-6 {
+  padding-top: 6px;
+  padding-bottom: 6px;
 }
 
 .py-8 {
@@ -286,6 +357,10 @@ body {
 
 .width-48 {
   width: 48px;
+}
+
+.width-64 {
+  width: 64px;
 }
 
 .width-128 {
@@ -410,6 +485,14 @@ input {
   color: black;
   border: none;
   outline: none;
+}
+
+.inbox-text-input {
+  color: var(--dark-gray);
+  font-size: 16px;
+  padding: 8px 14px;
+  border-radius: 8px;
+  border: none;
 }
 
 .login-text-input {
