Finish draggable canvas feature

--- a/src/style.css
+++ b/src/style.css
@@ -27,10 +27,17 @@ body {
   position: relative;
   width: 100%;
   height: 384px; /* h-96 equivalent */
-  background-color: #f3f4f6; /* bg-gray-100 */
+  background-color: var(--medium-black);
   border-radius: 0.5rem; /* rounded-lg */
   overflow: hidden;
   touch-action: none; /* Prevent browser touch gestures */
+}
+
+.profile-page-play-timeline {
+  background-color: var(--white);
+  height: 4px;
+  width: 100%;
+  border-radius: 1px;
 }
 
 /* Draggable image item */
@@ -50,13 +57,8 @@ body {
 
 /* Image styling */
 .draggable-image {
-  width: 6rem; /* w-24 = 96px */
-  height: 6rem; /* h-24 = 96px */
-  object-fit: cover;
-  border-radius: 0.5rem; /* rounded-lg */
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
-    0 4px 6px -4px rgba(0, 0, 0, 0.1); /* shadow-lg */
-  border: 2px solid white;
+  object-fit: contain;
+  border-radius: 4px; /* rounded-lg */
 }
 
 /* Mobile optimizations */
@@ -707,6 +709,27 @@ input {
   text-decoration: none;
 }
 
+.draggable-save-btn {
+  background-color: var(--white);
+  color: black;
+  font-weight: bold;
+  border: none;
+  border-radius: 4px;
+  padding: 8px 12px;
+  width: 50%;
+}
+
+.edit-profile-btn {
+  background-color: var(--white);
+  border: none;
+  color: black;
+  padding: 6px 12px;
+  font-size: 15px;
+  border-radius: 6px;
+  font-weight: bold;
+  text-decoration: none;
+}
+
 /* Icons and Images */
 .notification {
   position: absolute;
@@ -723,6 +746,24 @@ input {
   width: 32px;
   height: 32px;
   min-width: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+  display: block;
+}
+
+.profile-page-picture {
+  width: 38px;
+  height: 38px;
+  min-width: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+  display: block;
+}
+
+.profile-page-community-picture {
+  width: 28px;
+  height: 28px;
+  min-width: 28px;
   border-radius: 50%;
   object-fit: cover;
   display: block;
